--- a/00-M2-CS2B-ASI-July-2022/M2-Question2.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question2.Rmd
@@ -67,30 +67,37 @@ Lung_Deaths
 ## 2018 3102 2294 2385 2444 1748 1554 1498 1361 1346 1564 1640 2293
 ## 2019 2815 3137 2679 1969 1870 1633 1529 1366 1357 1570 1535 2491
 ## 2020 3084 2605 2573 2143 1693 1504 1461 1354 1333 1492 1781 1915
+
 ---
-# (ii)
+
+### Part B
+
+```{r}
 plot(Lung_Deaths, ylab = "Lung Deaths", main = "Lung deaths between 2015 and 
 2020")
- [3]
+```
+
 ---
 # (iii)
+
+```{r}
 acf(Lung_Deaths, lag.max = 30,main = "ACF of Lung Deaths")
 pacf(Lung_Deaths, lag.max = 30,main = "PACF of Lung Deaths")
- [6]
-IAI CS2B-0722
-Page 6 of 14
+```
+
 ---
-# There is seasonality in monthly data for which high values tend always to 
+
+* There is seasonality in monthly data for which high values tend always to 
 occur in some particular months and low values tend always to occur in other 
 particular months. In this case, S = 12 (months per year) is the span of the 
 periodic seasonal behavior
-# If significant correlation persists over many lags in the ACF functions, It 
+* If significant correlation persists over many lags in the ACF functions, It 
 could either be a truly random autocorrelation in the series or there is a 
 fixed effect or trend that hasn't been removed (i.e. the series is not 
 stationary). Hence non stationary data
-# Time Series of Lung Deaths is establishing seasonality which is visible 
+* Time Series of Lung Deaths is establishing seasonality which is visible 
 from highs and lows at uniform intervals of time
-# ACF is exhibiting a high positive serial correlation at Lag 1 indicating 
+* ACF is exhibiting a high positive serial correlation at Lag 1 indicating 
 the presence of seasonality in the data
 
 ---
@@ -110,14 +117,14 @@ pacf(diff12,lag.max = 30)
 # One summary statistic of a stationary time series is the auto-correlation f
 unction, or the ACF
 
-# If significant correlation persists over many lags in the ACF functions, It 
+* If significant correlation persists over many lags in the ACF functions, It 
 could either be a truly random autocorrelation in the series or there is a fi
 xed effect or trend that hasn't been removed (i.e. the series is not stationa
 ry). Here that is not the case and hence stationary data
-# Even after the seasonal difference, we observe significant correlation with 
+* Even after the seasonal difference, we observe significant correlation with 
 lag 12 both in the ACF and the PACF, indicating seasonal AR first order could 
 be an appropriate model for the data
-#The blue dotted lines on the ACF and PACF indicate cut-offs for significance
+*The blue dotted lines on the ACF and PACF indicate cut-offs for significance
 .
 #For a stationary time-series the ACF should decay to zero quickly and displa
 y no signs of oscillation.
