--- a/00-M2-CS2B-ASI-July-2022/M2-Question5.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question5.Rmd
@@ -36,8 +36,11 @@ pre {
 
 ---
 
-[12]
-Q. 5) 1.  Write a general function to compute the truncated moments for a lognormal distribution 
+
+
+### Part A
+
+1.  Write a general function to compute the truncated moments for a lognormal distribution 
 using k, σ, µ, L (the lower bound) and U (the upper bound)
  Given
 σ= 0.7
@@ -53,6 +56,8 @@ normal distribution with the same µ and σ.
 
 Solution 5
 # (i)
+
+```{r}
 trunc_logN <- function(k, mu, sig, L, U){
  
  Lk <- (log(L) - mu)/sig - k*sig
@@ -65,9 +70,11 @@ trunc_logN <- function(k, mu, sig, L, U){
  print(paste("Final Value:", cumulate))
  
 }
- [4]
-IAI CS2B-0722
-Page 11 of 14
+```
+
+---
+
+
 # (ii)
 trunc_logN(1, 1.2, 0.7, 10,Inf)
 ## [1] "First term: 4.24185214282043"
@@ -91,6 +98,10 @@ exp(1.2+0.5*0.7^2)
 ## [1] 4.241852
 exp(2*1.2+0.7^2)*(exp(0.7^2)-1)+(exp(1.2+0.5*0.7^2))^2
 ## [1] 29.37077
+
+---
+
+
 trunc_logN(1, 1.2, 0.7, 0,Inf)
 ## [1] "First term: 4.24185214282043"
 ## [1] "Phi(Uk): 1"
@@ -102,16 +113,15 @@ trunc_logN(2, 1.2, 0.7, 0,Inf)
 ## [1] "Phi(Lk): 0"
 ## [1] "Final Value: 29.3707711132894"
 ----
-# (iv)
-# The results are not comparable as (ii) is associated with Lognormal distrib
-ution while (iii) is associated with normal distribution
-IAI CS2B-0722
-Page 12 of 14
-# Assuming (iii) is log normal distribution
-# The mean and variance of a truncated distribution are very much lower than 
-the non-truncated because
+
+#### Part D
+
+* The results are not comparable as (ii) is associated with Lognormal distribution while (iii) is associated with normal distribution
+* Assuming (iii) is log normal distribution
+* The mean and variance of a truncated distribution are very much lower than the non-truncated because
 # (i) Beyond 10, the probabilities are very less and the actual range of valu
 es in excess of 10 is very limited
 # (ii) The consistency improves because of a narrower range and hence lower v
 ariance and second order movement
- [3]
+
+---
